Closed
Bug 224526
Opened 22 years ago
Closed 22 years ago
Page isn't scrolled using slider.
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: waveridervsnrz, Assigned: jag+mozilla)
References
Details
(Keywords: smoketest)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.6a) Gecko/20031024 Camino/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.6a) Gecko/20031103 Camino/0.7+
On 20031103 self-build, Page isn't scrolled using slider.
(When I use wheel mouse,scrolling is possible)
Reproducible: Always
Steps to Reproduce:
1.Click slider and Drag this.
Actual Results:
Page is scrolled.
Expected Results:
Page is not scrolled.
I think this bug is caused 10/31/2003 checkin by uid502 on SeaMonkyBrowser.
Comment 1•22 years ago
|
||
Waverider is this also true in Mozilla ? if so this bug should be mozilla, not
camino.
This bug occur on Camino, But Mozilla latest nightly (20031103) is no problem.
Comment 4•22 years ago
|
||
does this happen using the classic skin in mozilla? modern would not have this
problem at all.
Comment 5•22 years ago
|
||
Pink, I can confirm this on a Firebird build from this morning. Someone broke
native scrollbars on Mac. I'll try to find out when.
Comment 6•22 years ago
|
||
*** Bug 224350 has been marked as a duplicate of this bug. ***
Comment 7•22 years ago
|
||
not a camino bug
Component: General → XP Toolkit/Widgets
Product: Camino → Browser
Version: unspecified → Trunk
Comment 8•22 years ago
|
||
not camino bug
Assignee: pinkerton → jag
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: jrgmorrison
Comment 9•22 years ago
|
||
i think this has to do with roc's changes on 10/31. roc?
Flags: blocking1.6b?
Comment 10•22 years ago
|
||
build from the dupe was the 31st and I've tested to see that it works on the
build from the 30th so this broke sometime between those to Firebird builds.
Pink, can you try backing out this patch here? I think this is it.
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/layout/html/document/src&command=DIFF_FRAMESET&file=nsFrameFrame.cpp&rev1=3.237&rev2=3.238&root=/cvsroot
I don't understand why it would break Mac native scrollbars. But if this is the
problem, we can back this out on the trunk. I am working on an alternative
approach that obsoletes this change, although probably that alternative patch
should be tested on the Mac too... See
http://bugzilla.mozilla.org/show_bug.cgi?id=212366#c50
Comment 12•22 years ago
|
||
See also bug 224349, which may or may not be related.
The backout in comment 11 didn't make a difference for me.
Comment 14•22 years ago
|
||
This problem and the problem listed in bug 224349 happened at the same time for
me. I believe it was when I built from CVS on Saturday morning, 11/1/03. So,
they might be related.
Comment 15•22 years ago
|
||
fix was checked in (widget/src/mac/nsToolkitBase.cpp, revision 1.2)
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 16•22 years ago
|
||
*** Bug 224637 has been marked as a duplicate of this bug. ***
Comment 17•22 years ago
|
||
*** Bug 224620 has been marked as a duplicate of this bug. ***
Comment 18•22 years ago
|
||
*** Bug 224611 has been marked as a duplicate of this bug. ***
Comment 19•22 years ago
|
||
*** Bug 224612 has been marked as a duplicate of this bug. ***
Just for the record, that fixed a regression from bug 197863
Comment 21•22 years ago
|
||
This fix also took care of bug 224349.
Updated•22 years ago
|
Flags: blocking1.6b?
You need to log in
before you can comment on or make changes to this bug.
Description
•