fix for mac blocker bug 224526.  Make sure to initialize the widget atoms. r=brendan.